# substrate-node-template

pallets/claim/: Cargo.toml
pallets/claim/src/: lib.rs  mock.rs  tests.rs
pallets/poe/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
