[package]
authors = ['Luswar']
edition = '2018'
name = 'pallet-claim'
version = "2.0.0"
license = "Apache 2.0"
repository = "https://github.com/LusWar/substrate-node-template"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.102", default-features = false }
serde_derive = { version = "1.0.102", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-runtime = {  version = "2.0.0", default-features = false }

[dependencies.pallet-balances]
default-features = false
version = "2.0.0"

[dev-dependencies]
hex-literal = "0.2.1"
pallet-timestamp = { version = "2.0.0" }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-runtime = {  version = "2.0.0", default-features = false  }
rustc-hex = { version = "2.0.1", default-features = false }


[features]
default = ['std']
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
]
